# mkdocs-plugin-inline-svg

./: .gitignore  LICENSE  LICENSE.md  README.md  build.sh  pyproject.toml  setup.py
mkdocs_plugin_inline_svg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mkdocs_plugin_inline_svg_mod/: __init__.py  plugin.py
requirements/: dev-requirements.txt  requirements.txt
src/: __init__.py  plugin.py
test/: test-regex.py
tools/: build.sh  setup.py
